Commit #201: Add Idea Tags to Modal Dialog

--- a/hello/templates/ideas.html
+++ b/hello/templates/ideas.html
@@ -58,128 +58,145 @@
 				}
 
 		.idea-container .idea-sub-header {
-			height: 60px;	
+			height: 60px;
 		}
 
-		.idea-container .idea-sub-header .idea-sub-header-text {
-			margin: 0px 5px;
-		}
-
-			.idea-container .idea-sub-header .idea-sub-header-text span {
-				margin: 10px 5px;
-				float: left;
-				/* Font Specification */
-				font-size: 14px;
-				font-weight: 400;
-				font-family: Segoe UI;
-				/* Restrict Height to 2 lines */
-				overflow: hidden;
-				text-overflow: ellipsis;
-				line-height: 20px;
-				max-height: calc(2*20px);
+			.idea-container .idea-sub-header .idea-sub-header-text {
+				margin: 0px 5px;
 			}
 
-		#ideaModal .modal-content {
-			position: fixed;
-				top: 36%;
-				left: 36%;
-				height: 200px;
-				width: 400px;	
-		}
+				.idea-container .idea-sub-header .idea-sub-header-text span {
+					margin: 10px 5px;
+					float: left;
+					/* Font Specification */
+					font-size: 14px;
+					font-weight: 400;
+					font-family: Segoe UI;
+					/* Restrict Height to 2 lines */
+					overflow: hidden;
+					text-overflow: ellipsis;
+					line-height: 20px;
+					max-height: calc(2*20px);
+				}
+
+	#ideaModal .modal-content {
+		position: fixed;
+		top: 36%;
+		left: 36%;
+		height: 200px;
+		width: 400px;
+	}
 
 	/* CSS for Idea Modal Container */
 	.idea-modal-container {
-		margin: 5px;	
+		margin: 5px;
 	}
 
-	.idea-modal-container .idea-header {
-		background-color: rgba(127,255,0,0.85);
-			height: 60px;	
-	}
+		.idea-modal-container .idea-header {
+			background-color: rgba(127,255,0,0.85);
+			height: 60px;
+		}
 
-	.idea-modal-container .idea-header .idea-icon {
-		float: left;
-			margin: 10px 5px 5px 5px;	
-	}
+			.idea-modal-container .idea-header .idea-icon {
+				float: left;
+				margin: 10px 5px 5px 5px;
+			}
 
-	.idea-modal-container .idea-header .idea-icon img {
-		height: 45px;
-			width: 45px;	
-	}
+				.idea-modal-container .idea-header .idea-icon img {
+					height: 45px;
+					width: 45px;
+				}
 
-	.idea-modal-container .idea-header .idea-header-text {
-		float: left;
-			margin: 10px 5px;
-			width: 231px;
-			white-space: nowrap;
-			overflow: hidden;
-			text-overflow: clip;	
-	}
+			.idea-modal-container .idea-header .idea-header-text {
+				float: left;
+				margin: 10px 5px;
+				width: 231px;
+				white-space: nowrap;
+				overflow: hidden;
+				text-overflow: clip;
+			}
 
-	.idea-modal-container .idea-header .idea-header-text span {
-		font-size: 27px;
-			font-weight: 600;
-			font-family: Segoe UI Light;	
-	}
+				.idea-modal-container .idea-header .idea-header-text span {
+					font-size: 27px;
+					font-weight: 600;
+					font-family: Segoe UI Light;
+				}
 
-	.idea-modal-container .idea-sub-header {
-		height: 40px;	
-	}
+		.idea-modal-container .idea-sub-header {
+			height: 40px;
+		}
 
-	.idea-modal-container .idea-sub-header .idea-sub-header-text {
-		margin: 0px 5px;	
-	}
+			.idea-modal-container .idea-sub-header .idea-sub-header-text {
+				margin: 0px 5px;
+			}
 
-	.idea-modal-container .idea-sub-header .idea-sub-header-text span {
-		margin: 10px 5px;
-			float: left;
-			font-size: 14px;
-			font-weight: 400;
-			font-family: Segoe UI;
-			overflow: hidden;
-			text-overflow: ellipsis;
-			line-height: 20px;
-			max-height: calc(2*20px);	
-	}
+				.idea-modal-container .idea-sub-header .idea-sub-header-text span {
+					margin: 10px 5px;
+					float: left;
+					font-size: 14px;
+					font-weight: 400;
+					font-family: Segoe UI;
+					overflow: hidden;
+					text-overflow: ellipsis;
+					line-height: 20px;
+					max-height: calc(2*20px);
+				}
 
-	.idea-modal-container .idea-conceptualized-by {
-		height: 40px;	
-	}
+		.idea-modal-container .idea-conceptualized-by {
+			height: 40px;
+		}
 
-	.idea-modal-container .idea-conceptualized-by .label-container,
-	.idea-modal-container .idea-conceptualized-by .name-container {
-		margin: 10px 5px;
-			float: left;	
-	}
+			.idea-modal-container .idea-conceptualized-by .label-container,
+			.idea-modal-container .idea-conceptualized-by .name-container {
+				margin: 10px 5px;
+				float: left;
+			}
 
-	.idea-modal-container .idea-conceptualized-by .name-container span {
-		/* Display Blue Color For the Name*/
-		color: blue;
-		/* Make it look like a Name Link */
-			font-size: 16px;
-			font-weight: 700;
-			font-family: Segoe UI;
-		/* Display Ellipsis on text overflow beyond 2 lines */
-			overflow: hidden;
-			text-overflow: ellipsis;
-			line-height: 20px;
-			max-height: calc(2*20px);
-		/* Display Pointer on Mouse Hover */
-			cursor: pointer;
-	}
+				.idea-modal-container .idea-conceptualized-by .name-container span {
+					/* Display Blue Color For the Name*/
+					color: blue;
+					/* Make it look like a Name Link */
+					font-size: 16px;
+					font-weight: 700;
+					font-family: Segoe UI;
+					/* Display Ellipsis on text overflow beyond 2 lines */
+					overflow: hidden;
+					text-overflow: ellipsis;
+					line-height: 20px;
+					max-height: calc(2*20px);
+					/* Display Pointer on Mouse Hover */
+					cursor: pointer;
+				}
 
-	.idea-modal-container .idea-description {
-		height: 90px;	
-	}
+		.idea-modal-container .idea-description,
+		.idea-modal-container .idea-tags {
+			height: 90px;
+		}
 
-	.idea-modal-container .idea-description .label-container {
-		margin: 10px 5px 5px 5px;	
-	}
+			.idea-modal-container .idea-description .label-container,
+			.idea-modal-container .idea-tags .label-container {
+				margin: 10px 5px 5px 5px;
+			}
 
-	.idea-modal-container .idea-description .description-container {
-		margin: 0px 5px;	
-	}
+			.idea-modal-container .idea-description .description-container,
+			.idea-modal-container .idea-tags .tags-container {
+				margin: 0px 5px;
+			}
 
+				.idea-modal-container .idea-tags .tags-container .idea-tag {
+					/* Give Green Color Background to Idea Tag*/
+					background-color: rgba(18,255,60,1);
+					height: 30px;
+					width: auto;
+					margin: 5px;
+					float: left;
+					/* Display Pointer on Mouse Over */
+					cursor: pointer;
+				}
+
+					.idea-modal-container .idea-tags .tags-container .idea-tag div {
+						padding: 5px;
+					}
 </style>
 
 <div class="container">
@@ -197,7 +214,7 @@
 			<div id="1" class="idea-container">
 				<div class="idea-header">
 					<div class="idea-icon">
-						<img src="/static/activities/wake-up.png"/>
+						<img src="/static/activities/wake-up.png" />
 					</div>
 					<div class="idea-header-text">
 						<span title="SABI">SABI</span>
@@ -229,7 +246,7 @@
 			<div class="idea-modal-container">
 				<div class="idea-header">
 					<div class="idea-icon">
-						<img src="/static/activities/wake-up.png"/>
+						<img src="/static/activities/wake-up.png" />
 					</div>
 					<div class="idea-header-text">
 						<span title="SABI">SABI</span>
@@ -256,6 +273,18 @@
 						<span title="SABI is a global conglomerate that would hold several companies and other conglomerates in it. It will exist for millenia and would take care of mother earth and humanity.">SABI is a global conglomerate that would hold several companies and other conglomerates in it. It will exist for millenia and would take care of mother earth and humanity.</span>
 					</div>
 				</div>
+				<div class="idea-tags">
+					<div class="label-container">
+						<label>Tags</label>
+					</div>
+					<div class="tags-container">
+						<div class="idea-tag">
+							<div class="idea-tag-text">
+								<div>Top Secret</div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -266,14 +295,14 @@
 
 	/* Add SABI Idea to the collection */
 	var sabiIdea = {
-				"ideaId": "1",
-				"ideaIconRef": "/static/activities/wake-up.png",
-				"ideaHeaderText": "SABI",
-			"ideaSubHeaderText": "The Global Conglomerate that controls the world"
-		};
+		"ideaId": "1",
+		"ideaIconRef": "/static/activities/wake-up.png",
+		"ideaHeaderText": "SABI",
+		"ideaSubHeaderText": "The Global Conglomerate that controls the world"
+	};
 
 	/* Append the new Activity to the Canvas Tile Data */
-		ideasCollection["1"] = sabiIdea;
+	ideasCollection["1"] = sabiIdea;
 
 
 	/* Page load handler to initialize data */
@@ -281,21 +310,20 @@
 		/* Click Handler for Idea Container */
 		$(".idea-container").click(function (e) {
 			/*Fetch Idea Container Id */
-				var id = $(e.currentTarget)[0].id;
+			var id = $(e.currentTarget)[0].id;
 
 			var currentIdea = ideasCollection[id];
-			if(currentIdea)
-			{
+			if (currentIdea) {
 				/* Update the fields of JQuery Modal Dialog */
 				//TODO
-								
+
 				/* Display JQuery UI based Modal Dialog */
 				$("#ideaModalDialog").dialog('open');
 			}
-			});
+		});
 
 		/* Create JQuery UI based Modal Dialog for Idea */
-		$("#ideaModalDialog").dialog({modal:true, minWidth:900, minHeight: 450});
+		$("#ideaModalDialog").dialog({ modal: true, minWidth: 900, minHeight: 450 });
 		/* Keep the Dialog Closed by default */
 		$("#ideaModalDialog").dialog('close');
 	});
