Commit #202: Add more tags to SABI Idea

--- a/hello/templates/ideas.html
+++ b/hello/templates/ideas.html
@@ -194,7 +194,7 @@
 					cursor: pointer;
 				}
 
-					.idea-modal-container .idea-tags .tags-container .idea-tag div {
+					.idea-modal-container .idea-tags .tags-container .idea-tag .idea-tag-text div {
 						padding: 5px;
 					}
 </style>
@@ -281,6 +281,21 @@
 						<div class="idea-tag">
 							<div class="idea-tag-text">
 								<div>Top Secret</div>
+							</div>
+						</div>
+						<div class="idea-tag">
+							<div class="idea-tag-text">
+								<div>Conglomerate</div>
+							</div>
+						</div>
+						<div class="idea-tag">
+							<div class="idea-tag-text">
+								<div>Organization</div>
+							</div>
+						</div>
+						<div class="idea-tag">
+							<div class="idea-tag-text">
+								<div>Tech Giant</div>
 							</div>
 						</div>
 					</div>
