Commit #203: Give a Flouroscent effect to Idea Tag Text

--- a/hello/templates/ideas.html
+++ b/hello/templates/ideas.html
@@ -184,8 +184,8 @@
 			}
 
 				.idea-modal-container .idea-tags .tags-container .idea-tag {
-					/* Give Green Color Background to Idea Tag*/
-					background-color: rgba(18,255,60,1);
+					/* Give Olive Color Background to Idea Tag*/
+					background-color: olivedrab;
 					height: 30px;
 					width: auto;
 					margin: 5px;
@@ -196,6 +196,8 @@
 
 					.idea-modal-container .idea-tags .tags-container .idea-tag .idea-tag-text div {
 						padding: 5px;
+						/* Gives a Flouroscent Color to Idea Tag Text */
+						color: chartreuse;
 					}
 </style>
 
