Commit #204:Rename idea-row to idea-tile-container

--- a/hello/templates/ideas.html
+++ b/hello/templates/ideas.html
@@ -212,7 +212,7 @@
 </div>
 <div class="container">
 	<div class="idea-main-container">
-		<div class="idea-row">
+		<div class="idea-tile-container">
 			<div id="1" class="idea-container">
 				<div class="idea-header">
 					<div class="idea-icon">
