Commit #213: Add NIK Idea to ideasCollection

--- a/hello/templates/ideas.html
+++ b/hello/templates/ideas.html
@@ -415,8 +415,18 @@
 		"ideaSubHeaderText": "The Global Conglomerate that controls the world"
 	};
 
-	/* Add the new Activity to the Canvas Tile Data */
 	ideasCollection.push(sabiIdea);
+	
+	/* Add NIK Idea to the collection */
+	var nikIdea = {
+		"ideaId": "124",
+		"ideaIconRef": "/static/activities/wake-up.png",
+		"ideaHeaderText": "NIK",
+		"ideaSubHeaderText": "Natural Intermediate Knowledge"
+	};
+
+	ideasCollection.push(nikIdea);
+	
 	
 	var ideasTemplateCollection = [];
 	
