Commit #214: Add ConceptualizedBy & Description

--- a/hello/templates/ideas.html
+++ b/hello/templates/ideas.html
@@ -246,7 +246,7 @@
 						<label>Conceptualized By</label>
 					</div>
 					<div class="name-container">
-						<span title="Sachin Bhat">Sachin Bhat</span>
+						<span title="Sachin Bhat">{{:conceptualizedBy}}</span>
 					</div>
 				</div>
 				<div class="idea-description">
@@ -254,7 +254,7 @@
 						<label>What's it about?</label>
 					</div>
 					<div class="description-container">
-						<span title="SABI is a global conglomerate that would hold several companies and other conglomerates in it. It will exist for millenia and would take care of mother earth and humanity.">SABI is a global conglomerate that would hold several companies and other conglomerates in it. It will exist for millenia and would take care of mother earth and humanity.</span>
+						<span title="{{:ideaDescription}}">{{:ideaDescription}}</span>
 					</div>
 				</div>
 				<div class="idea-tags">
@@ -412,7 +412,9 @@
 		"ideaId": "123",
 		"ideaIconRef": "/static/activities/wake-up.png",
 		"ideaHeaderText": "SABI",
-		"ideaSubHeaderText": "The Global Conglomerate that controls the world"
+		"ideaSubHeaderText": "The Global Conglomerate that controls the world",
+		"conceptualizedBy": "Sachin Bhat",
+		"ideaDescription": "SABI is a global conglomerate that would hold several companies and other conglomerates in it. It will exist for millenia and would take care of mother earth and humanity."
 	};
 
 	ideasCollection.push(sabiIdea);
@@ -422,7 +424,9 @@
 		"ideaId": "124",
 		"ideaIconRef": "/static/activities/wake-up.png",
 		"ideaHeaderText": "NIK",
-		"ideaSubHeaderText": "Natural Intermediate Knowledge"
+		"ideaSubHeaderText": "Natural Intermediate Knowledge",
+		"conceptualizedBy": "Sachin Bhat",
+		"ideaDescription": "It is a framework that would enable cross human-machine-divine-animate communication. It will result into the dissolution of linguistic barriers and will ensure consistency in communication."
 	};
 
 	ideasCollection.push(nikIdea);
