Commit #216: Add empty ideaTags to NIK Idea

--- a/hello/templates/ideas.html
+++ b/hello/templates/ideas.html
@@ -447,7 +447,8 @@
 		"ideaHeaderText": "NIK",
 		"ideaSubHeaderText": "Natural Intermediate Knowledge",
 		"conceptualizedBy": "Sachin Bhat",
-		"ideaDescription": "It is a framework that would enable cross human-machine-divine-animate communication. It will result into the dissolution of linguistic barriers and will ensure consistency in communication."
+		"ideaDescription": "It is a framework that would enable cross human-machine-divine-animate communication. It will result into the dissolution of linguistic barriers and will ensure consistency in communication.",
+		"ideaTags": []
 	};
 
 	ideasCollection.push(nikIdea);
