Commit #218: Add KB Idea

--- a/hello/templates/ideas.html
+++ b/hello/templates/ideas.html
@@ -421,10 +421,30 @@
 		"ideaSubHeaderText": "Natural Intermediate Knowledge",
 		"conceptualizedBy": "Sachin Bhat",
 		"ideaDescription": "It is a framework that would enable cross human-machine-divine-animate communication. It will result into the dissolution of linguistic barriers and will ensure consistency in communication.",
-		"ideaTags": []
+		"ideaTags": [
+			{"tagId": "20", "tagName": "Software Framework"},
+			{"tagId": "21", "tagName": "Multi Lingual"}
+		]
 	};
 
 	ideasCollection.push(nikIdea);
+	
+	/* Add KB Idea to the collection */
+	var kbIdea = {
+		"ideaId": "125",
+		"ideaIconRef": "/static/activities/wake-up.png",
+		"ideaHeaderText": "KB",
+		"ideaSubHeaderText": "Knowledge Base",
+		"conceptualizedBy": "Sachin Bhat",
+		"ideaDescription": "It is a knowledge base that would store everything that has happened in this universe. It will stay for millenia and will be a data repository for the future human races.",
+		"ideaTags": [
+			{"tagId": "30", "tagName": "Knowledge Base"},
+			{"tagId": "31", "tagName": "Data Repository"}
+		]
+	};
+
+	ideasCollection.push(kbIdea);
+	
 	
 	
 	var ideasTemplateCollection = [];
