--- a/hello/templates/ideas.html
+++ b/hello/templates/ideas.html
@@ -79,18 +79,17 @@
 					max-height: calc(2*20px);
 				}
 	
-			.idea-container .idea-sub-header .idea-footer {
+			.idea-container .idea-footer {
 				/* Keep it to the Tile Bottom */
-				position: relative;
     				top: 40px;
-				height: 20px;
+				height: 21px;
 				/* Display Greyish Background color */
     				background-color: #8B8989;
     				/* Keep it hidden by default */
     				display: none;	
 			}
 			
-			.idea-container:hover .idea-sub-header .idea-footer {
+			.idea-container:hover .idea-footer {
 				/* Show the Idea Footer on hover */
 				display: block;	
 			}
@@ -235,8 +234,8 @@
 					<div class="idea-sub-header-text">
 						<span title="{{:ideaSubHeaderText}}">{{:ideaSubHeaderText}}</span>
 					</div>
-					<div class="idea-footer">
-					</div>
+				</div>
+				<div class="idea-footer">
 				</div>
 			</div>
     {% endverbatim %}
@@ -543,6 +542,13 @@
 				$("#ideaModalDialog").dialog('open');
 			}
 		});
+		/* End of Click Handler for Idea Container */
+		
+		/* Click Handler for Idea Footer */
+		$(".idea-container .idea-footer").click(function(e) {
+			e.stopPropagation();
+		});
+		/* End of Click Handler for Idea Footer */
 
 		/* End Click Handlers Block */
 	});
