Commit #223: Fix CSS for SubIdeasContainer

--- a/hello/templates/ideas.html
+++ b/hello/templates/ideas.html
@@ -94,7 +94,8 @@
 				display: block;	
 			}
 	
-			.idea-container .sub-ideas-container {
+	/* CSS for Sub Ideas Container */
+	.idea-main-container .idea-tile-container .sub-ideas-container {
 				/* Make positioning similar to other Idea Tile Containers */
 				position: relative;
     				float: left;
@@ -105,7 +106,7 @@
     				height: 100px;
 				/* Currently set to red, change to appropriate color as needed */
     				background-color: red;
-			}	
+	}	
 
 	/* TODO: Remove the below stray class '#ideaModal .modal-content' if not needed */
 	#ideaModal .modal-content {
